fix: Changes made for props and types naming and removed the wrapper div
- Remove wrapper div around DataTable (moonstone-dataTable unused)
- Simplify sort icon CSS: hidden by default, visible on hover or when active
- Rename ...tableProps to ...props for consistency with other components
- Change rowProps from function to object for static attribute support
- Change cellProps from function to object for static attribute support

--- a/src/components/DataTable/table-cells/TableHeadCell.scss
+++ b/src/components/DataTable/table-cells/TableHeadCell.scss
@@ -1,21 +1,21 @@
 .moonstone-tableCellHead_sort {
     color: var(--color-gray_light);
 
+    visibility: hidden;
+
     &:hover {
         color: var(--color-gray);
     }
 }
 
-.moonstone-tableCellHead_sortHidden {
-    visibility: hidden;
-}
-
-.moonstone-TableHeadCell:hover .moonstone-tableCellHead_sortHidden {
+.moonstone-TableHeadCell:hover .moonstone-tableCellHead_sort {
     visibility: visible;
 }
 
 .moonstone-tableCellHead_sortActive {
     color: var(--color-accent);
+
+    visibility: visible;
 
     &:hover {
         color: var(--color-accentDark);
